--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss:dev": "postcss _dev/assets/css/*.css -c _dev/postcss.config.js --replace --no-map",
     "postcss:prod": "postcss dist/*.css -u autoprefixer --replace --no-map",
     "prebuild": "npm run lint:fix",
+    "prestart": "cp scripts/pre-commit .git/hooks/ && chmod +x .git/hooks/pre-commit",
     "start": "npm run dev",
     "watch:dev": "sass -I node_modules -I scss --no-source-map _dev/assets/scss:_dev/assets/css --watch --update",
     "watch": "npm run build:sass -- --watch --update"
