--- a/.stylelintrc
+++ b/.stylelintrc
@@ -32,6 +32,14 @@
         ]
       }
     ],
-    "color-function-notation": "modern"
+    "color-function-notation": "modern",
+    "color-named": [
+      "never",
+      {
+        "ignore": [
+          "inside-function"
+        ]
+      }
+    ]
   }
 }
