--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "Nuno <mail@nuno.site> Freire",
   "license": "MIT",
   "scripts": {
-    "browser-sync": "browser-sync start --server --startPath \"_dev/index.html\" --files \"**/*\" --directory --no-notify --no-open",
-    "build:dev": "sass -I node_modules -I scss --no-source-map _dev/assets/scss:_dev/assets/css && npm run postcss:dev",
+    "browser-sync": "browser-sync start --server --startPath \"dev/index.html\" --files \"**/*\" --directory --no-notify --no-open",
+    "build:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css && npm run postcss:dev",
     "build:sass:min": "sass -I node_modules -s compressed --no-source-map scss/koi.scss:dist/koi.min.css",
     "build:sass": "sass -I node_modules --no-source-map scss/koi.scss:dist/koi.css",
     "build": "npm run clean && concurrently npm:build:sass npm:build:sass:min && npm run postcss:prod",
@@ -27,12 +27,12 @@
     "lint:fix": "stylelint scss/**/*.scss --fix",
     "lint": "stylelint scss/**/*.scss",
     "postwatch:dev": "npm run postcss:dev",
-    "postcss:dev": "postcss _dev/assets/css/*.css -c _dev/postcss.config.js --replace --no-map",
+    "postcss:dev": "postcss dev/assets/css/*.css -c dev/postcss.config.js --replace --no-map",
     "postcss:prod": "postcss dist/*.css -u autoprefixer --replace --no-map",
     "prebuild": "npm run lint:fix",
     "prestart": "cp scripts/pre-commit .git/hooks/ && chmod +x .git/hooks/pre-commit",
     "start": "npm run dev",
-    "watch:dev": "sass -I node_modules -I scss --no-source-map _dev/assets/scss:_dev/assets/css --watch --update",
+    "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --watch --update",
     "watch": "npm run build:sass -- --watch --update"
   },
   "dependencies": {
