--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "stylelint scss/**/*.scss",
     "postwatch:dev": "npm run postcss:dev",
     "postcss:dev": "postcss dev/assets/css/*.css -c dev/postcss.config.js --replace --no-map",
-    "postcss:prod": "postcss dist/*.css -u autoprefixer --replace --no-map",
+    "postcss:prod": "postcss dev/assets/css/*.css -c postcss.config.js --replace --no-map",
     "prebuild": "npm run lint:fix",
     "prestart": "cp scripts/pre-commit .git/hooks/ && chmod +x .git/hooks/pre-commit",
     "start": "npm run dev",
@@ -37,13 +37,14 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.5",
     "browser-sync": "^2.27.9",
     "concurrently": "^7.1.0",
     "cssnano": "^5.1.7",
     "postcss-cli": "^9.1.0",
-    "sass": "^1.50.1",
-    "stylelint": "^14.7.1",
+    "postcss-preset-env": "^7.4.4",
+    "sass": "^1.51.0",
+    "stylelint": "^14.8.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-sass-guidelines": "^9.0.1"
   }
