--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss:prod": "postcss dev/assets/css/*.css -c postcss.config.js --replace --no-map",
     "prebuild": "npm run lint:fix",
     "prestart": "cp scripts/pre-commit .git/hooks/ && chmod +x .git/hooks/pre-commit",
+    "prepare": "husky install",
     "start": "npm run dev",
     "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update",
     "watch": "npm run build:sass -- --watch --update"
@@ -41,6 +42,7 @@
     "browser-sync": "^2.27.9",
     "concurrently": "^7.1.0",
     "cssnano": "^5.1.7",
+    "husky": "^7.0.4",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.4.4",
     "sass": "^1.51.0",
