--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
   "author": "Nuno <mail@nuno.site> Freire",
   "license": "MIT",
   "scripts": {
-    "browser-sync": "browser-sync start --server --startPath \"dev/index.html\" --files \"**/*\" --directory --no-notify --no-open",
     "build:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css && npm run postcss:dev",
     "build:sass:min": "sass -I node_modules -s compressed --no-source-map scss/koi.scss:dist/koi.min.css",
     "build:sass": "sass -I node_modules --no-source-map scss/koi.scss:dist/koi.css",
     "build": "npm run clean && concurrently npm:build:sass npm:build:sass:min && npm run postcss:prod",
     "clean": "rm -rf ./css",
-    "dev": "concurrently npm:watch:dev npm:browser-sync",
+    "dev": "concurrently npm:watch:dev npm:serve",
     "lint:fix": "stylelint scss/**/*.scss --fix",
     "lint": "stylelint scss/**/*.scss",
     "postwatch:dev": "npm run postcss:dev",
@@ -31,14 +30,15 @@
     "postcss:prod": "postcss dev/assets/css/*.css -c postcss.config.js --replace --no-map",
     "prebuild": "npm run lint:fix",
     "prepare": "husky install",
+    "serve": "live-server ./dev --no-browser",
     "start": "npm run dev",
     "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update",
     "watch": "npm run build:sass -- --watch --update"
   },
   "devDependencies": {
+    "@compodoc/live-server": "^1.2.3",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "autoprefixer": "^10.4.5",
-    "browser-sync": "^2.27.9",
     "concurrently": "^7.1.0",
     "cssnano": "^5.1.7",
     "husky": "^7.0.4",
