--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "author": "Nuno <mail@nuno.site> Freire",
   "license": "MIT",
   "scripts": {
-    "build:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css && npm run postcss:dev",
-    "build:styles:min": "sass -I node_modules -s compressed --no-source-map scss/koi-styles.scss:dist/koi.min.css",
-    "build:styles": "sass -I node_modules --no-source-map scss/koi-styles.scss:dist/koi.css",
+    "build:dev": "sass -I node_modules -I scss -I dist --no-source-map dev/assets/scss:dev/assets/css && npm run postcss:dev",
+    "build:styles": "sass -I node_modules --no-source-map scss/koi-styles.scss:dist/koi.css scss/koi-utilities.scss:dist/koi-utilities.css",
+    "build:styles:min": "sass -I node_modules -s compressed --no-source-map scss/koi-styles.scss:dist/koi.min.css scss/koi-utilities.scss:dist/koi-utilities.min.css",
     "build": "npm run clean && concurrently npm:build:styles npm:build:styles:min && concurrently npm:postcss:prod*",
     "clean": "rm -rf ./css",
     "dev": "concurrently npm:watch:dev npm:serve",
@@ -27,11 +27,11 @@
     "lint": "stylelint scss/**/*.scss",
     "postwatch:dev": "npm run postcss:dev",
     "postcss:dev": "postcss dev/assets/css/*.css -c dev/postcss.config.js --replace --no-map",
-    "postcss:prod": "postcss dist/koi.css -u autoprefixer --replace --no-map",
-    "postcss:prod:min": "postcss dist/koi.min.css -u autoprefixer -u cssnano --replace --no-map",
+    "postcss:prod": "postcss dist/koi.css dist/koi.utilities.css -u autoprefixer --replace --no-map",
+    "postcss:prod:min": "postcss dist/koi.min.css dist/koi.utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
     "prebuild": "npm run lint:fix",
     "prepare": "husky install",
-    "serve": "live-server ./dev --no-browser",
+    "serve": "live-server ./dev --mount=/dist:./dist --no-browser",
     "start": "npm run dev",
     "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update",
     "watch": "npm run build:styles -- --watch --update"
