--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "postcss:prod:min": "postcss dist/koi.min.css dist/koi.utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
     "prebuild": "npm run lint:fix",
     "prepare": "husky install",
-    "serve": "live-server ./dev --mount=/dist:./dist --no-browser --no-css-inject",
+    "serve": "live-server ./dev --mount=/assets/css:./dist --no-browser --no-css-inject",
     "start": "npm run dev",
     "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update",
     "watch": "npm run build:styles -- --watch --update"
