--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:styles:min": "sass -I node_modules -s compressed --no-source-map scss/koi-styles.scss:dist/koi.min.css scss/koi-utilities.scss:dist/koi-utilities.min.css",
     "build": "npm run clean && concurrently npm:build:styles npm:build:styles:min && concurrently npm:postcss:prod*",
     "clean": "rm -rf ./css",
-    "dev": "concurrently npm:watch:dev npm:serve",
+    "dev": "npm run build:styles && concurrently npm:watch:dev npm:serve",
     "lint:fix": "stylelint scss/**/*.scss --fix",
     "lint": "stylelint scss/**/*.scss",
     "postwatch:dev": "npm run postcss:dev",
