--- a/.stylelintrc
+++ b/.stylelintrc
@@ -40,6 +40,8 @@
           "inside-function"
         ]
       }
-    ]
+    ],
+    "scss/dollar-variable-pattern": "^[-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+    "scss/at-function-pattern": "^[-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$"
   }
 }
