--- a/.stylelintrc
+++ b/.stylelintrc
@@ -42,6 +42,7 @@
       }
     ],
     "scss/dollar-variable-pattern": "^[-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
-    "scss/at-function-pattern": "^[-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$"
+    "scss/at-function-pattern": "^[-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$",
+    "scss/at-mixin-pattern": "^[-_]?([a-z][a-z0-9]*)(-[a-z0-9]+)*$"
   }
 }
