--- a/package.json
+++ b/package.json
@@ -17,27 +17,35 @@
   "author": "Nuno <mail@nuno.site> Freire",
   "license": "MIT",
   "scripts": {
-    "build:dev": "sass -I node_modules -I scss -I dist --no-source-map dev/assets/scss:dev/assets/css && npm run postcss:dev",
+    "start": "npm run dev",
+    "dev": "concurrently npm:watch:dev npm:serve",
+    "predev": "npm run build",
+    "build:dev": "sass -I node_modules -I scss -I dist --no-source-map dev/assets/scss:dev/assets/css",
     "build:utilities": "sass -I node_modules --no-source-map scss/koi-utilities.scss:dist/koi-utilities.css",
     "build:utilities:min": "sass -I node_modules -s compressed --no-source-map scss/koi-utilities.scss:dist/koi-utilities.css",
     "build:styles": "sass -I node_modules --no-source-map scss/koi-styles.scss:dist/koi.css scss/koi-utilities.scss:dist/koi-utilities.css",
     "build:styles:min": "sass -I node_modules -s compressed --no-source-map scss/koi-styles.scss:dist/koi.min.css scss/koi-utilities.scss:dist/koi-utilities.min.css",
-    "build": "npm run clean && concurrently npm:build:styles npm:build:styles:min && concurrently npm:postcss:prod*",
-    "clean": "rm -rf ./css",
-    "compress": "tar -czvf dist/koi.min.css.tar.gz dist/koi.min.css & tar -czvf dist/koi-utilities.min.css.tar.gz dist/koi-utilities.min.css",
-    "dev": "npm run build:utilities && concurrently npm:watch:dev npm:serve",
-    "lint:fix": "stylelint scss/**/*.scss --fix",
-    "lint": "stylelint scss/**/*.scss",
-    "postwatch:dev": "npm run postcss:dev",
+    "build": "concurrently npm:build:*",
+    "prebuild": "npm run clean",
+    "postbuild": "npm run postcss",
+    "watch:sass": "sass -I node_modules --no-source-map scss --color --watch --update",
+    "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update & onchange 'dev/assets/css/*.css' -- npm run postcss:dev",
     "postcss:dev": "postcss dev/assets/css/*.css -c dev/postcss.config.js --replace --no-map",
     "postcss:prod": "postcss dist/koi.css dist/koi.utilities.css -u autoprefixer --replace --no-map",
     "postcss:prod:min": "postcss dist/koi.min.css dist/koi.utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
-    "prebuild": "npm run lint:fix",
-    "prepare": "husky install",
+    "postcss": "concurrently npm:postcss:*",
     "serve": "live-server ./dev --mount=/assets/css:./dist --no-browser --no-css-inject",
-    "start": "npm run dev",
-    "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update",
-    "watch": "npm run build:styles -- --watch --update"
+    "clean": "rm -rf ./css",
+    "prepare": "husky install",
+    "compress": "tar -czvf dist/koi.min.css.tar.gz dist/koi.min.css & tar -czvf dist/koi-utilities.min.css.tar.gz dist/koi-utilities.min.css",
+    "compress:dev": "tar -czvf dev/assets/css/main.css.tar.gz dev/assets/css/main.css",
+    "release:dev": "npm run build:dev && npm run postcss:dev",
+    "postrelease:dev": "npm run compress:dev",
+    "release": "npm run build",
+    "prerelease": "npm run lint:fix",
+    "postrelease": "npm run compress",
+    "lint:fix": "stylelint scss/**/*.scss --fix",
+    "lint": "stylelint scss/**/*.scss"
   },
   "devDependencies": {
     "@compodoc/live-server": "^1.2.3",
@@ -46,6 +54,7 @@
     "concurrently": "^7.3.0",
     "cssnano": "^5.1.12",
     "husky": "^8.0.1",
+    "onchange": "^7.1.0",
     "postcss-cli": "^10.0.0",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.54.0",
