--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build": "concurrently npm:build:*",
     "prebuild": "npm run clean",
     "postbuild": "npm run postcss",
-    "watch:sass": "sass -I node_modules --no-source-map scss --color --watch --update",
-    "watch:dev": "sass -I node_modules -I scss --no-source-map dev/assets/scss:dev/assets/css --color --watch --update & onchange 'dev/assets/css/*.css' -- npm run postcss:dev",
+    "watch:dev": "npm run build:dev -- --color --watch --update",
+    "watch:styles": "npm run build:styles -- --color --watch --update",
     "postcss:dev": "postcss dev/assets/css/*.css -c dev/postcss.config.js --replace --no-map",
     "postcss:prod": "postcss dist/koi.css dist/koi.utilities.css -u autoprefixer --replace --no-map",
     "postcss:prod:min": "postcss dist/koi.min.css dist/koi.utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
@@ -54,7 +54,6 @@
     "concurrently": "^7.3.0",
     "cssnano": "^5.1.12",
     "husky": "^8.0.1",
-    "onchange": "^7.1.0",
     "postcss-cli": "^10.0.0",
     "postcss-preset-env": "^7.7.2",
     "sass": "^1.54.0",
