--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "postbuild": "npm run postcss",
     "watch:dev": "npm run build:dev -- --color --watch --update",
     "watch:styles": "npm run build:styles -- --color --watch --update",
-    "postcss:dev": "postcss dev/assets/css/*.css -c dev/postcss.config.js --replace --no-map",
+    "postcss:dev": "postcss dev/assets/css/*.css --dir dev/assets/css -c dev/postcss.config.js --no-map",
     "postcss:prod": "postcss dist/koi.css dist/koi-utilities.css -u autoprefixer --replace --no-map",
     "postcss:prod:min": "postcss dist/koi.min.css dist/koi-utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
     "postcss": "concurrently npm:postcss:*",
+    "serve:dev": "npm run build:utilities && npm run build:dev && npm run postcss:dev && npm run serve",
     "serve": "live-server ./dev --mount=/assets/css:./dist --no-browser --no-css-inject",
     "clean": "rm -rf ./css",
     "prepare": "husky install",
