--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "concurrently npm:watch:dev npm:serve",
-    "predev": "npm run build",
+    "predev": "concurrently npm:build:utilities npm:build:dev",
     "build:dev": "sass -I node_modules -I scss -I dist --no-source-map dev/assets/scss:dev/assets/css",
     "build:utilities": "sass -I node_modules --no-source-map scss/koi-utilities.scss:dist/koi-utilities.css",
     "build:utilities:min": "sass -I node_modules -s compressed --no-source-map scss/koi-utilities.scss:dist/koi-utilities.css",
