--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "koicss",
+  "name": "umbracss",
   "version": "0.1.0",
-  "description": "Kind of CSS framework made with koi!",
-  "main": "./scss/koi.scss",
-  "style": "./dist/koi.min.css",
+  "description": "Kind of CSS framework!",
+  "main": "./scss/umbra.scss",
+  "style": "./dist/umbra.min.css",
   "files": [
     "dist/*.css",
     "sass/**/*.scss"
@@ -13,7 +13,7 @@
     "sass",
     "css-framework"
   ],
-  "repository": "https://github.com/greven/koiCSS",
+  "repository": "https://github.com/greven/umbracss",
   "author": "Nuno <mail@nuno.site> Freire",
   "license": "MIT",
   "scripts": {
@@ -21,24 +21,24 @@
     "dev": "concurrently npm:watch:dev npm:serve",
     "predev": "concurrently npm:build:utilities npm:build:dev",
     "build:dev": "sass -I node_modules -I scss -I dist --no-source-map dev/assets/scss:dev/assets/css",
-    "build:utilities": "sass -I node_modules --no-source-map scss/koi-utilities.scss:dist/koi-utilities.css",
-    "build:utilities:min": "sass -I node_modules -s compressed --no-source-map scss/koi-utilities.scss:dist/koi-utilities.css",
-    "build:styles": "sass -I node_modules --no-source-map scss/koi-styles.scss:dist/koi.css scss/koi-utilities.scss:dist/koi-utilities.css",
-    "build:styles:min": "sass -I node_modules -s compressed --no-source-map scss/koi-styles.scss:dist/koi.min.css scss/koi-utilities.scss:dist/koi-utilities.min.css",
+    "build:utilities": "sass -I node_modules --no-source-map scss/umbra-utilities.scss:dist/umbra-utilities.css",
+    "build:utilities:min": "sass -I node_modules -s compressed --no-source-map scss/umbra-utilities.scss:dist/umbra-utilities.css",
+    "build:styles": "sass -I node_modules --no-source-map scss/umbra-styles.scss:dist/umbra.css scss/umbra-utilities.scss:dist/umbra-utilities.css",
+    "build:styles:min": "sass -I node_modules -s compressed --no-source-map scss/umbra-styles.scss:dist/umbra.min.css scss/umbra-utilities.scss:dist/umbra-utilities.min.css",
     "build": "concurrently npm:build:*",
     "prebuild": "npm run clean",
     "postbuild": "npm run postcss",
     "watch:dev": "npm run build:dev -- --color --watch --update",
     "watch:styles": "npm run build:styles -- --color --watch --update",
     "postcss:dev": "postcss dev/assets/css/*.css --dir dev/assets/css -c dev/postcss.config.js --no-map",
-    "postcss:prod": "postcss dist/koi.css dist/koi-utilities.css -u autoprefixer --replace --no-map",
-    "postcss:prod:min": "postcss dist/koi.min.css dist/koi-utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
+    "postcss:prod": "postcss dist/umbra.css dist/umbra-utilities.css -u autoprefixer --replace --no-map",
+    "postcss:prod:min": "postcss dist/umbra.min.css dist/umbra-utilities.min.css -u autoprefixer -u cssnano --replace --no-map",
     "postcss": "concurrently npm:postcss:*",
     "serve:dev": "npm run build:utilities && npm run build:dev && npm run postcss:dev && npm run serve",
     "serve": "live-server ./dev --mount=/assets/css:./dist --no-browser --no-css-inject",
     "clean": "rm -rf ./css",
     "prepare": "husky install",
-    "compress": "tar -czvf dist/koi.min.css.tar.gz dist/koi.min.css & tar -czvf dist/koi-utilities.min.css.tar.gz dist/koi-utilities.min.css",
+    "compress": "tar -czvf dist/umbra.min.css.tar.gz dist/umbra.min.css & tar -czvf dist/umbra-utilities.min.css.tar.gz dist/umbra-utilities.min.css",
     "compress:dev": "tar -czvf dev/assets/css/main.css.tar.gz dev/assets/css/main.css",
     "release:dev": "npm run build:dev && npm run postcss:dev",
     "postrelease:dev": "npm run compress:dev",
@@ -50,16 +50,16 @@
   },
   "devDependencies": {
     "@compodoc/live-server": "^1.2.3",
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "autoprefixer": "^10.4.8",
-    "concurrently": "^7.3.0",
-    "cssnano": "^5.1.13",
-    "husky": "^8.0.1",
-    "postcss-cli": "^10.0.0",
-    "postcss-preset-env": "^7.7.2",
-    "sass": "^1.54.4",
-    "stylelint": "^14.10.0",
-    "stylelint-config-prettier": "^9.0.3",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
+    "cssnano": "^5.1.14",
+    "husky": "^8.0.3",
+    "postcss-cli": "^10.1.0",
+    "postcss-preset-env": "^8.0.1",
+    "sass": "^1.58.0",
+    "stylelint": "^15.1.0",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-sass-guidelines": "^9.0.1"
   }
 }
